# bluepaper

./: .gitmodules  1.js  235.js  Cargo.toml  README.md  index.html  index.js  oauth-redirect.html  revoke.html
.github/workflows/: cd.yml  ci.yml  pr-link.yml  updated_pull_request.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: format.rs  latex_escape.rs  lib.rs  preamble.tex  preprocess.rs
fonts/Gabriela/: converted.eot
fonts/IM_Fell_English/: converted.eot
pulldown-cmark/: Cargo.toml
src/: conversion.rs  latex_escape.rs  main.rs  preamble.tex
src/conversion/: latex_escape.rs
wasm/: Cargo.toml  package-lock.json  package.json  webpack.config.js
wasm/js/: index.js
wasm/src/: lib.rs
wasm/static/: download.html  index.html  oauth-redirect.html  revoke.html
