[package]
authors = ["Robert Bamler <robert.bamler@gmail.com>"]
edition = "2018"
name = "bluepaper"
version = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluepaper_core = {path = "../core"}
confy = "0.4.0"
log = "0.4"
reqwest = {version = "0.11.9", features = ["blocking", "json"]}
serde = "1.0.101"
serde_json = "1.0.41"
stderrlog = "0.5.1"
structopt = "0.3.2"
tectonic = "0.9.0"
